Home page layout complete

--- a/css/home_page.scss
+++ b/css/home_page.scss
@@ -1,6 +1,9 @@
+@import 'variables';
+
 .center{
-		border:1px solid green;
+		/*border:1px solid green;*/
 		display:flex;
+		height:350px;
 		flex-direction:column;
 		align-items: center;
 
@@ -9,7 +12,6 @@
 		text-align:center;
 		margin-top:130px;
 		position:absolute;
-		border:1px solid purple;
 	}
 
 	.center-title{
@@ -29,9 +31,48 @@
 	}
 
 	.center-img{
+		 -webkit-filter: drop-shadow(2px 2px 3px rgba(108, 109, 109, 0.4) );
+ filter: drop-shadow(2px 2px 3px rgba(108, 109, 109, 0.4) );
 		z-index:-1;
 		position:absolute;
-		width:26em;
+		max-width:26em;
 		display:block;
 	}
+
 }
+	.home-content{
+		display:flex;
+		flex-direction:row;
+		align-items:center;
+		justify-content: space-between;
+
+		.home-column{
+			cursor:pointer;
+			transition: all 0.5s cubic-bezier(.25,.8,.25,1);
+			font-family: 'Raleway', sans-serif;
+			text-align:center;
+			height:130px;
+			width:30%;
+			padding:1em;
+			border-radius:6px;
+
+			&:hover{
+				background:white;
+		    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+			}
+
+			.column-title{
+
+				font-weight:700;
+				margin-bottom:0;
+				font-size:1em;
+			}
+
+			.column-text{
+				font-size:0.75em;
+				font-weight:400;
+			}
+		}
+
+	}
+
