--- a/css/variables.scss
+++ b/css/variables.scss
@@ -1,2 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat:300, 400,500,700,900|Raleway:300, 400,500,700,900|');
+
 $forest-green: #00a07d;
-$stone-gray: #423e3e
+$stone-gray: #423e3e;
+$cloud-gray: #646a6b;
