--- a/css/app.scss
+++ b/css/app.scss
@@ -1,10 +1,8 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat:300, 400,500,700,900|Raleway:300, 400,500,700,900|');
 @import 'variables';
 
 :global {
   body {
 		overflow-x:hidden;
-		overflow-y: hidden;
 		margin: 0;
 		padding: 0;
 		color: $stone-gray;
@@ -23,11 +21,9 @@
 	.page{
 		border:1px solid gray;
 		padding: 1em 2em;
-		height:100vh;
 	}
 
 	.top-row{
-		border:1px solid pink;
 		height:4em;
 		display:flex;
 		justify-content: space-between;
@@ -55,7 +51,7 @@
 	}
 
 	.nav-bar{
-		font-size:0.8em;
+		font-size:0.75em;
 		font-family: 'Raleway', sans-serif;
 	}
 
@@ -66,5 +62,13 @@
 		justify-content: space-between;
 	}
 	.nav-list > li{
+		border-radius:3px;
+		cursor:pointer;
+		padding:0.5em;
 		text-transform:uppercase;
+		transition: all 0.5s cubic-bezier(.25,.8,.25,1);
+
+		&:hover{
+		  box-shadow: 0 7px 14px rgba(0,0,0,0.13), 0 5px 5px rgba(0,0,0,0.11);
+		}
 	}
