--- a/css/app.scss
+++ b/css/app.scss
@@ -1,5 +1,7 @@
 @import 'variables';
 
+
+
 :global {
   body {
 		overflow-x:hidden;
@@ -12,6 +14,11 @@
 			list-style:none;
 		}
 
+		a{
+	    color: $stone-gray;
+	    text-decoration: none;
+		}
+
 		.active{
 			font-weight:700;
 		}
@@ -19,7 +26,6 @@
 }
 
 	.page{
-		border:1px solid gray;
 		padding: 1em 2em;
 	}
 
@@ -31,8 +37,11 @@
 	}
 
 	.wordmark{
+		transition: all 0.5s cubic-bezier(.25,.8,.25,1);
 		font-weight:600;
 		font-size:1.4em;
+		border-radius:10px;
+		padding:0.5em;
 		display:flex;
 		flex-direction:row;
 		cursor: pointer;
@@ -44,6 +53,9 @@
             user-select: none; /* Non-prefixed version, currently
                                   supported by Chrome and Opera */
 		align-items:center;
+			&:hover{
+			  box-shadow: 0 7px 7px rgba(0,0,0,0.13), 0 5px 5px rgba(0,0,0,0.11);
+			}
 	}
 
 	.tree-logo{
