--- a/css/app.scss
+++ b/css/app.scss
@@ -76,7 +76,7 @@
 	.nav-list > li{
 		border-radius:3px;
 		cursor:pointer;
-		padding:0.5em;
+		padding:0.5em 1em;
 		text-transform:uppercase;
 		transition: all 0.5s cubic-bezier(.25,.8,.25,1);
 
