--- a/css/app.scss
+++ b/css/app.scss
@@ -4,7 +4,7 @@
 
 :global {
   body {
-  	text-decoration: none;
+  	text-decoration: none !important;
 		overflow-x:hidden;
 		margin: 0;
 		padding: 0;
@@ -43,12 +43,13 @@
 	}
 
 	.wordmark{
+		text-decoration: none;
 		border:1px solid transparent;
 		transition: all 0.5s cubic-bezier(.25,.8,.25,1);
 		font-weight:600;
 		font-size:1.4em;
-		border-radius:10px;
-		padding:0.5em;
+		border-radius:2px;
+		padding:0.3em;
 		display:flex;
 		flex-direction:row;
 		cursor: pointer;
@@ -61,6 +62,8 @@
                                   supported by Chrome and Opera */
 		align-items:center;
 			&:hover{
+				transform:translateY(-2px);
+				text-decoration: none;
 				border:1px solid $light-gray;
 			  box-shadow: 0 7px 7px rgba(0,0,0,0.13), 0 5px 5px rgba(0,0,0,0.11);
 			}
@@ -77,14 +80,13 @@
 	}
 
 	.nav-list{
-		width:250px;
 		display:flex;
 		flex-direction:row;
 		justify-content: space-between;
 	}
 	.nav-list > li{
 		text-decoration: none;
-		border-radius:3px;
+		border-radius:2px;
 		cursor:pointer;
 		font-weight:500;
 		padding:0.5em 1em;
@@ -93,8 +95,9 @@
 		transition: all 0.5s cubic-bezier(.25,.8,.25,1);
 
 		&:hover{
-			border:1px solid $light-gray;
+			transform:translateY(-2px);
 			text-decoration: none;
+			border:1px solid $light-gray;
 		  box-shadow: 0 7px 14px rgba(0,0,0,0.13), 0 5px 5px rgba(0,0,0,0.11);
 		}
 	}
