--- a/css/footer.scss
+++ b/css/footer.scss
@@ -4,11 +4,12 @@
 	font-family: 'Raleway', sans-serif;
 	height:150px;
 	color:white;
+	margin-top:100px;
 	font-size:0.7em;
 	display:flex;
 	font-weight:400;
 	flex-direction:row;
 	align-items: center;
 	justify-content: space-around;
-	background:$forest-green;
+	background:$cloud-gray;
 }
