--- a/css/home_page.scss
+++ b/css/home_page.scss
@@ -1,12 +1,11 @@
 @import 'variables';
 
 .center{
-		/*border:1px solid green;*/
+		cursor:pointer;
 		display:flex;
 		height:350px;
 		flex-direction:column;
 		align-items: center;
-
 
 	.center-text{
 		text-align:center;
@@ -15,10 +14,15 @@
 	}
 
 	.center-title{
+		transition: all 0.5s cubic-bezier(.25,.8,.25,1);
 		margin:0px;
 		color:white;
 		padding:0;
 		font-size:35px;
+
+		&:hover{
+			transform:translateY(-10px);
+		};
 	}
 
 	.center-subtitle{
@@ -32,7 +36,7 @@
 
 	.center-img{
 		 -webkit-filter: drop-shadow(2px 2px 3px rgba(108, 109, 109, 0.4) );
- filter: drop-shadow(2px 2px 3px rgba(108, 109, 109, 0.4) );
+		 filter: drop-shadow(2px 2px 3px rgba(108, 109, 109, 0.4) );
 		z-index:-1;
 		position:absolute;
 		max-width:30em;
@@ -47,6 +51,8 @@
 		justify-content: space-between;
 
 		.home-column{
+			cursor:pointer;
+			transition: all 0.5s cubic-bezier(.25,.8,.25,1);
 			font-family: 'Raleway', sans-serif;
 			text-align:center;
 			height:130px;
@@ -54,15 +60,19 @@
 			padding:1em;
 			border-radius:6px;
 
-			.column-title{
+			&:hover{
+				transform:translateY(-10px);
+			};
 
+			.column-title{
 				font-weight:700;
-				margin-bottom:0;
-				font-size:1em;
+				margin-bottom:5;
+				font-size:1.1em;
 			}
 
 			.column-text{
-				font-size:0.75em;
+				line-height:1.3;
+				font-size:0.8em;
 				font-weight:400;
 			}
 		}
