Wrap li in Link instead of the other way around

--- a/css/app.scss
+++ b/css/app.scss
@@ -91,7 +91,7 @@
 		flex-direction:row;
 		justify-content: space-between;
 	}
-	.nav-list > li{
+	.nav-list > a{
 		text-decoration: none;
 		border-radius:2px;
 		cursor:pointer;
