--- a/css/app.scss
+++ b/css/app.scss
@@ -37,7 +37,6 @@
 }
 
 	.page{
-		border:1px solid green;
 		width:100vw;
 		padding: 1em 2em;
 	}
@@ -97,12 +96,14 @@
 		border-radius:2px;
 		cursor:pointer;
 		font-weight:500;
+		color: $stone-gray;
 		padding:0.5em 1em;
 		text-transform:uppercase;
 		border:1px solid transparent;
 		transition: all 0.5s cubic-bezier(.25,.8,.25,1);
 
 		&:hover{
+			color: $stone-gray;
 			transform:translateY(-2px);
 			text-decoration: none;
 			border:1px solid $light-gray;
