--- a/css/variables.scss
+++ b/css/variables.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat:300, 400,500,700,900|Raleway:300, 400,500,700,900|');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:300, 400,500,700,900|Raleway:300,400,500,700,900|');
 
 $forest-green: #00a07d;
 $stone-gray: #423e3e;
