--- a/css/footer.scss
+++ b/css/footer.scss
@@ -4,8 +4,10 @@
 	font-family: 'Raleway', sans-serif;
 	height:150px;
 	color:white;
+	width:100%;
 	margin-top:100px;
 	font-size:0.7em;
+	float:left;
 	bottom:0;
 	left:0;
 	display:flex;
