--- a/css/lightbox.css
+++ b/css/lightbox.css
@@ -1,6 +1,6 @@
 /* Preload images */
 body:after {
-  content: url(../images/close.png) url(../images/loading.gif) url(../images/prev.png) url(../images/next.png);
+  content: url(../images/delete-cross.svg) url(../images/loading.gif) url(../images/back.svg) url(../images/next.svg);
   display: none;
 }
 
@@ -109,7 +109,8 @@ body.lb-disable-scrolling {
   width: 34%;
   left: 0;
   float: left;
-  background: url(../images/prev.png) left 48% no-repeat;
+  background: url(../images/back.svg) left 48% no-repeat;
+  background-size: 50px 50px;
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
   opacity: 0;
 }
@@ -123,7 +124,8 @@ body.lb-disable-scrolling {
   width: 64%;
   right: 0;
   float: right;
-  background: url(../images/next.png) right 48% no-repeat;
+  background: url(../images/next.svg) right 48% no-repeat;
+  background-size: 50px 50px;
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
   opacity: 0;
 }
@@ -165,8 +167,7 @@ body.lb-disable-scrolling {
 }
 
 .lb-data .lb-caption {
-  font-size: 15px;
-  font-weight: 400;
+  font-size: 18px;
   line-height: 1em;
 }
 
@@ -177,19 +178,23 @@ body.lb-disable-scrolling {
 .lb-data .lb-number {
   display: block;
   clear: left;
+  padding-top:0.5em;
   padding-bottom: 1em;
-  font-size: 12px;
+  font-weight: 100;
+  font-size: 18px;
   color: #999999;
 }
 
 .lb-data .lb-close {
   display: block;
   float: right;
-  width: 60px;
-  height: 60px;
-  background: url(../images/close.png) top right no-repeat;
+  width: 30px;
+  height: 30px;
+  background: url(../images/delete-cross.svg) top right no-repeat;
+  background-size: 30px 30px;
   text-align: right;
   outline: none;
+  padding-top:1em;
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=70);
   opacity: 0.7;
 }
