--- a/css/contact.scss
+++ b/css/contact.scss
@@ -6,11 +6,16 @@
 }
 
 h3{
+	cursor:pointer;
+	transition: all 0.5s cubic-bezier(.25,.8,.25,1);
 	font-size:1.8em;
 	font-family:'Raleway';
 	font-weight:900;
 	margin-top:2em;
 	margin-bottom:1em;
+	&:hover{
+		transform:translateY(-8px);
+	};
 }
 
 .info-list{
