--- a/css/variables.scss
+++ b/css/variables.scss
@@ -4,3 +4,10 @@ $forest-green: #00a07d;
 $stone-gray: #423e3e;
 $cloud-gray: #646a6b;
 $light-gray: #ededed;
+
+
+$break-large: 1200px;
+$break-medium:920px;
+$break-small: 900px;
+$break-smallest:750px;
+$mobile-screen:480px;
