Update with business photos

--- a/css/app.scss
+++ b/css/app.scss
@@ -15,7 +15,7 @@
 		padding: 0;
 		color: $stone-gray;
 		font-family: 'Montserrat', sans-serif;
-		width:100%;
+		/*width:100%;*/
 
 		ul{
 			list-style:none;
