--- a/css/contact.scss
+++ b/css/contact.scss
@@ -16,11 +16,12 @@ h3{
 
 .info-list{
 	font-weight:100;
-	font-size:1.0em;
+	font-size:1em;
 	padding-left:0;
 
 	li{
-		padding-top:0.4em;
+		padding-top:0.5em;
+		padding-bottom:0.5em;
 	}
 }
 
@@ -36,5 +37,8 @@ h3{
 
 .insurance{
 	font-weight:100;
-	font-size:1.2em;
+	font-size:1.1em;
+	ol li{
+		margin-bottom:0.4em;
+	}
 }
