--- a/css/footer.scss
+++ b/css/footer.scss
@@ -1,19 +1,27 @@
 @import 'variables';
 
-.footer-container{
-	font-family: 'Raleway', sans-serif;
+.footer{
+	background:$cloud-gray;
 	height:150px;
-	color:white;
-	width:100%;
-	margin-top:100px;
-	font-size:1.0em;
-	float:left;
-	bottom:0;
-	left:0;
-	display:flex;
+		display:flex;
 	font-weight:400;
 	flex-direction:row;
 	align-items: center;
 	justify-content: space-around;
-	background:$cloud-gray;
+}
+
+.menu{
+	display:flex;
+	font-weight:100;
+	flex-direction:row;
+	align-items: center;
+	justify-content: space-around;
+
+
+	li {
+		color:white;
+	a{
+		color:white;
+	}
+	}
 }
