--- a/css/footer.scss
+++ b/css/footer.scss
@@ -10,6 +10,15 @@
 	justify-content: space-around;
 }
 
+.nav-icon{
+	width:2em;
+	margin-left:10px;
+
+	&:hover{
+		filter:brightness(110%);
+	};
+}
+
 .menu{
 	display:flex;
 	font-weight:100;
