--- a/css/contact.scss
+++ b/css/contact.scss
@@ -42,3 +42,51 @@ h3{
 		margin-bottom:0.4em;
 	}
 }
+
+.contactform{
+		font-family:'Raleway';
+}
+
+
+label{
+	color: $forest-green;
+	font-size:0.9em;
+}
+#contact-form {
+  margin-bottom: 22px; }
+  #contact-form .name {
+    margin-top: 24px;
+    margin-bottom: 23px; }
+    @media (max-width: 767px) {
+      #contact-form .name {
+        margin-top: 30px;
+        margin-bottom: 9px; } }
+  #contact-form .message {
+    margin-top: 20px;
+    margin-bottom: 46px;
+    min-height: 90px; }
+    @media (max-width: 767px) {
+      #contact-form .message {
+        margin-top: 10px;
+        margin-bottom: 71px; } }
+
+@media (max-width: 767px) {
+  .form-wrapper h4 {
+    font-size: 16px;
+    font-size: 1.6rem;
+    line-height: 24px; } }
+
+.form-wrapper .submit-btn {
+	transition: all 0.5s cubic-bezier(.25,.8,.25,1);
+	border:1px solid transparent;
+	background: $forest-green;
+  padding: 15px 37px; 
+
+  &:hover{
+		transform:translateY(-2px);
+	  box-shadow: 0 7px 7px rgba(0,0,0,0.13), 0 5px 5px rgba(0,0,0,0.11);
+  };
+}
+  @media (max-width: 767px) {
+    .form-wrapper .submit-btn {
+      width: 100%; } }
