--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4168,13 +4168,12 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   font-size:1.6em;
   z-index:2000;
   border-radius:2px;
-  background:white;
+  background:#e8e5e5;
   text-align:right;
   position: relative;
   min-height: 50px;
-  margin-bottom: 20px;
   margin-right: -10px;
-  margin-top:1.9em;
+  margin-top:2.1em;
   border: 1px solid transparent;
 }
 
@@ -4189,13 +4188,13 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   }
 }
 .navbar-collapse {
-  padding-right: 30%;
-  padding-left: 30%;
+  padding: 10% 30%;
   overflow-x: visible;
   -webkit-overflow-scrolling: touch;
   -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, .1);
           box-shadow: inset 0 1px 0 rgba(255, 255, 255, .1);
 }
+
 .navbar-collapse.in {
   overflow-y: auto;
 }
