--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4172,8 +4172,9 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   text-align:right;
   position: relative;
   min-height: 50px;
+  margin-bottom: 20px;
   margin-right: -10px;
-  margin-top:1.3em;
+  margin-top:1.9em;
   border: 1px solid transparent;
 }
 
@@ -4194,7 +4195,6 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, .1);
           box-shadow: inset 0 1px 0 rgba(255, 255, 255, .1);
 }
-
 .navbar-collapse.in {
   overflow-y: auto;
 }
