--- a/css/variables.scss
+++ b/css/variables.scss
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:300, 400,500,700,900|Raleway:300,400,500,700,900|');
 
+$hunter-green: #088c62;
 $forest-green: #00a07d;
 $stone-gray: #423e3e;
 $cloud-gray: #646a6b;
