--- a/css/home_page.scss
+++ b/css/home_page.scss
@@ -4,6 +4,13 @@
 	margin-bottom:5em;
 }
 
+.about-text{
+	font-family: 'Raleway', sans-serif;
+	line-height:1.3;
+	font-size:1.1em;
+	font-weight:100;
+}
+
 .bullet-point{
 	width:15px;
 	margin-right:10px;
@@ -11,19 +18,14 @@
 }
 
 .service-list{
-	text-align:left;
+	text-align:center;
+	color: $forest-green;
+	font-weight:bold;
 }
 	.center-img{
-		cursor:pointer;
-		 -webkit-filter: drop-shadow(2px 2px 3px rgba(108, 109, 109, 0.4) );
-		 filter: drop-shadow(2px 2px 3px rgba(108, 109, 109, 0.4) );
-		max-width:40%;
-		display:block;
 		transition: all 0.5s cubic-bezier(.25,.8,.25,1);
-
-		&:hover{
-			transform:translateY(-10px);
-		}
+		max-width:50%;
+		display:block;
 	}
 
 
@@ -47,6 +49,9 @@
 			}
 
 			.column-text{
+				display:flex;
+				flex-direction:row;
+				justify-content: space-around;
 				font-family: 'Raleway', sans-serif;
 				line-height:1.3;
 				font-size:1.1em;
