--- a/css/footer.scss
+++ b/css/footer.scss
@@ -1,6 +1,7 @@
 @import 'variables';
 
 .footer{
+	  box-shadow: 5px 5px 8px 8px rgba(0,0,0,0.2);
 		font-family:'Raleway';
 		/* IE10+ */ 
 	background:$cloud-gray;
