Subtle text shadow

--- a/css/home_page.scss
+++ b/css/home_page.scss
@@ -20,6 +20,8 @@
 .service-list{
 	text-align:center;
 	color: #5ab57d;
+	font-size:0.9em;
+	text-shadow: 1px 1px 3px rgba(0, 160, 125,0.3);
 	font-weight:bold;
 }
 	.center-img{
