--- a/css/contact.scss
+++ b/css/contact.scss
@@ -17,6 +17,7 @@ h3{
 .doc-link{
 	color: $hunter-green;
 	font-weight:bold;
+	text-shadow: 1px 1px 3px rgba(0, 160, 125,0.3);
 	padding:0.3em 0em;
 	&:hover{
 		border-bottom:2px solid $hunter-green;
