--- a/css/home_page.scss
+++ b/css/home_page.scss
@@ -53,7 +53,7 @@
 			.column-text{
 				display:flex;
 				flex-direction:row;
-				justify-content: space-between;
+				justify-content: space-around;
 				font-family: 'Raleway', sans-serif;
 				line-height:1.3;
 				font-size:1.1em;
