--- a/css/home_page.scss
+++ b/css/home_page.scss
@@ -4,6 +4,11 @@
 	margin-bottom:5em;
 }
 
+.about-icon{
+	width:6em;
+	padding:0.5em 1em 2.5em 1em;
+}
+
 .about-text{
 	font-family: 'Raleway', sans-serif;
 	line-height:1.3;
@@ -19,7 +24,7 @@
 
 .service-list{
 	text-align:center;
-	color: #5ab57d;
+	color: $cloud-gray;
 	font-size:0.9em;
 	font-weight:bold;
 }
