--- a/css/app.scss
+++ b/css/app.scss
@@ -111,7 +111,7 @@
 		transition: all 0.5s cubic-bezier(.25,.8,.25,1);
 
 		&:hover{
-			color: $stone-gray;
+			color: black;
 			transform:translateY(-2px);
 			text-decoration: none;
 			border:1px solid $light-gray;
