--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1603,6 +1603,7 @@ pre code {
   }
 }
 .container-fluid {
+  padding-top: 55px;
   padding-right: 15px;
   padding-left: 15px;
   margin-right: auto;
