--- a/css/reviews.scss
+++ b/css/reviews.scss
@@ -18,8 +18,9 @@
   background: #000; }
 
 .reviews-header {
+  margin-top:55px;
   margin-bottom: 41px;
-  margin-top: 0; }
+}
   @media (max-width: 767px) {
     .reviews-header {
       font-size: 26px !important;
