--- a/css/app.scss
+++ b/css/app.scss
@@ -76,7 +76,12 @@
 	}
 
 	.tree-logo{
-		width:120px;
+		width:150px;
+		margin-left:1em;
+
+		@media (max-width: 608px) {
+	    width: 100px;
+	  }
 	}
 
 	.nav-bar{
